fix(style): prevent images in Tutorials from overflowing

--- a/static/styles/jsdoc-default.css
+++ b/static/styles/jsdoc-default.css
@@ -118,6 +118,10 @@ section {
   padding: 0 30px;
 }
 
+section img {
+  max-width: 100%;
+}
+
 .variation {
   display: none
 }
